--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "Apache-2.0"
 python = "^3.10"
 fastapi = "^0.70.1"
 uvicorn = {extras = ["standard"], version = "^0.16.0"}
+Jinja2 = "^3.0.3"
+pydantic = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
