Install firebase-tools in devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -34,3 +34,5 @@ RUN curl -o /tmp/google-cloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/chann
     && su vscode -c "tar xf /tmp/google-cloud-sdk.tar.gz -C \$HOME/opt" \
     && su vscode -c "\$HOME/opt/google-cloud-sdk/install.sh --quiet" \
     && rm -f /tmp/google-cloud-sdk.tar.gz
+
+RUN npm install -g firebase-tools
