--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.70.1"
 uvicorn = {extras = ["standard"], version = "^0.16.0"}
 Jinja2 = "^3.0.3"
 pydantic = "^1.8.2"
+firebase-admin = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
