--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ firebase-admin = "^5.2.0"
 pytest = "^6.2.5"
 requests = "^2.26.0"
 pytest-cov = "^3.0.0"
+anyio = "^3.4.0"
+trio = "^0.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
