--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Jinja2 = "^3.0.3"
 pydantic = "^1.8.2"
 firebase-admin = "^5.2.0"
 google-api-python-client = "^2.33.0"
+google-cloud-firestore = "^2.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
