--- a/app.json
+++ b/app.json
@@ -33,6 +33,6 @@
     "options": {
         "allow-unauthenticated": true,
         "memory": "256Mi",
-        "cpu": 1
+        "cpu": "1"
     }
 }
