Update renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,6 +4,8 @@
     "config:base",
     ":prHourlyLimitNone",
   ],
+  assignAutomerge: false,
+  assigneesFromCodeOwners: true,
   dependencyDashboard: true,
   labels: ["renovate"],
   packageRules: [
